--- a/protolude.cabal
+++ b/protolude.cabal
@@ -79,3 +79,14 @@ library
 
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite Protolude-test
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  build-depends:       base
+                     , protolude
+                     , QuickCheck >= 2.8
+                     , doctest >= 0.11
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
+  default-language:    Haskell2010
