--- a/protolude.cabal
+++ b/protolude.cabal
@@ -54,28 +54,25 @@ library
 
   other-modules:
 
-  default-extensions:
-    NoImplicitPrelude
-    OverloadedStrings
-    FlexibleContexts
-    MultiParamTypeClasses
+  default-extensions: NoImplicitPrelude
+                      OverloadedStrings
+                      FlexibleContexts
+                      MultiParamTypeClasses
 
-  ghc-options:
-    -Wall
-    -fwarn-implicit-prelude
+  ghc-options: -Wall
+               -fwarn-implicit-prelude
 
-  build-depends:       
-    base             >= 4.6  && <4.10,
-    ghc-prim         >= 0.3  && <0.6,
-    safe             >= 0.3  && <0.4,
-    async            >= 2.1  && <2.2,
-    deepseq          >= 1.3  && <1.5,
-    containers       >= 0.5  && <0.6,
-    mtl              >= 2.1  && <2.3,
-    transformers     >= 0.4  && <0.6,
-    text             >= 1.2  && <1.3,
-    stm              >= 2.4  && <2.5,
-    bytestring       >= 0.10 && <0.11
+  build-depends: base             >= 4.6  && <4.10,
+                 ghc-prim         >= 0.3  && <0.6,
+                 safe             >= 0.3  && <0.4,
+                 async            >= 2.1  && <2.2,
+                 deepseq          >= 1.3  && <1.5,
+                 containers       >= 0.5  && <0.6,
+                 mtl              >= 2.1  && <2.3,
+                 transformers     >= 0.4  && <0.6,
+                 text             >= 1.2  && <1.3,
+                 stm              >= 2.4  && <2.5,
+                 bytestring       >= 0.10 && <0.11
 
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -88,5 +85,9 @@ test-suite Protolude-test
                      , protolude
                      , QuickCheck >= 2.8
                      , doctest >= 0.11
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
+  ghc-options:        -threaded
+                      -rtsopts
+                      -with-rtsopts=-N
+                      -Wall
+                      -Werror
   default-language:    Haskell2010
